# ing-zadanie

./: README.md  pyproject.toml
.github/workflows/: run_tests.yaml
domains/page_obect_models/: main_page.py
domains/page_obect_models/cookie_policy/: cookie_policy_popup.py  cookie_policy_settings.py
tests/: test_cookies.py
